--- a/packages/joy/index.html
+++ b/packages/joy/index.html
@@ -13,8 +13,8 @@
   <div class="app">
     <header>
       <nav>
-        <!-- 나의 프로필 -->
-        <!-- <div class="item">
+        <!-- 프로필 -->
+        <div class="item">
           <input type="radio" name="menubtn" id="profile" checked />
           <label for="profile" data-label="profile">
             <svg width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -26,7 +26,7 @@
                 fill="currentColor" />
             </svg>
           </label>
-        </div> -->
+        </div>
 
         <!-- 여우 사진 목록 -->
         <div class="item">
@@ -65,6 +65,7 @@
       <div class="container"></div>
       <div class="loader"></div>
     </main>
+    
   </div>
 
   <!-- 로딩 svg -->
